<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    >

    <ImageView
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_languages"
        android:layout_marginTop="@dimen/_18sdp"
        app:layout_constraintEnd_toStartOf="@id/btnMenu"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        android:layout_marginEnd="@dimen/_10sdp"
        android:id="@+id/btnLanguages"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/btnLiveMagnifier"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bar_bg"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/btnImageMagnifier"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_live_magnifier" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:text="@string/live_magnifier"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:textStyle="bold" />

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/layout_native"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_margin="@dimen/_3sdp"
        app:layout_constraintTop_toBottomOf="@id/btnLiveMagnifier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent">

        <include layout="@layout/native_ad_layout_loader_small" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/btnImageMagnifier"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/bar_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/btnSavedFiles"
        app:layout_constraintStart_toEndOf="@id/btnLiveMagnifier"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_image_magnifier" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/image_magnifier"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnSavedFiles"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bar_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnImageMagnifier">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/ic_gallery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:text="@string/saved_files"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>